Bug 65090 - EDITING: Merged cells in calc are not properly pasted (as RTF) into writer
Summary: EDITING: Merged cells in calc are not properly pasted (as RTF) into writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.3.0 target:4.2.0.2 target:4.1.5
Keywords: filter:rtf, regression
: 73820 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-05-28 16:54 UTC by Piotr
Modified: 2015-12-17 12:15 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
odg with screen prints of results in 366 403 401b2 (50.49 KB, application/vnd.oasis.opendocument.graphics)
2013-06-10 14:08 UTC, Cor Nouws
Details
DOCX file containing an explicit horizontal table cell merge. (10.17 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-12-23 10:29 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr 2013-05-28 16:54:21 UTC
When copying merged cells from calc to writer, merged cells are not merged any longer. In LO3 it worked properly. The problem is in LO4.

Steps to reproduce:
1) Create new document in calc
2) fill in some cells and merge some of them (I merge three horizontal cells)
3) select cells including these merged and copy CTRL-C
4) Switch to writer and EDIT->paste SPECIAL.
5) Choose "Formatted text [RTF]"
6) The cells are pasted but merging is split
Comment 1 ign_christian 2013-05-29 04:08:29 UTC
reproducible on LO 4.0.3.3 (Win7 32bit)

Ctrl-C will only select first cell, so only first cell copied to Writer. Merged cell can be copied by selecting all merged cells then hit Ctrl-C.
Comment 2 Cor Nouws 2013-06-10 14:08:12 UTC
Created attachment 80625 [details]
odg with screen prints of results in 366 403 401b2

confirm on Ubuntu.
See some more strange things compared in 366 and post 400
(Maybe someone else can do some more tests?)
Comment 3 Michael Stahl (allotropia) 2013-10-05 22:37:58 UTC
the old RTF filter pastes merged cells, the new one doesn't
Comment 4 Piotr 2013-11-04 08:24:51 UTC
Half a year passed and....  No response. Can someone check? I know it is not of the highest importance but I use this function every day and merging cells again in the writer is really annoying. Since it is already confirmed PLEASE assign this bug to the responsibles.
Comment 5 Miklos Vajna 2013-11-04 09:11:06 UTC
Assign.
Comment 6 Miklos Vajna 2013-12-23 10:29:17 UTC
Created attachment 91148 [details]
DOCX file containing an explicit horizontal table cell merge.

Root cause is that the DOCX import doesn't handle explicit horizontal merges in table cells (not to be confused with the situation when the merge is expressed with a wide and a missing cell, which is implicit), see the attached document. That should be fixed first, then the RTF part will be easy, I guess.
Comment 7 Commit Notification 2013-12-27 20:25:31 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bb562304c1e1c61a882e6db65806cfdf8601bcbf

Related: fdo#65090 Fix crash in SwXTextTableCursor::mergeRange()



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2013-12-27 20:26:02 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bb562304c1e1c61a882e6db65806cfdf8601bcbf

Related: fdo#65090 Fix crash in SwXTextTableCursor::mergeRange()



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2013-12-27 20:35:29 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=97dcf77841d19d344d58d5bdacdab141cdea4817

Related: fdo#65090 DOCX import: handle w:hMerge cell property



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2013-12-27 20:36:03 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=97dcf77841d19d344d58d5bdacdab141cdea4817

Related: fdo#65090 DOCX import: handle w:hMerge cell property



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2013-12-28 09:01:30 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6eb02ac8a77f9f89f256b190281029f6cbd60d95

fdo#65090 RTF filter: import RTF_CLMGF and RTF_CLMRG



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2013-12-28 09:34:40 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=709a197d930bf1f585834a8573f952e9030f3383&h=libreoffice-4-2

fdo#65090 RTF filter: import RTF_CLMGF and RTF_CLMRG


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Miklos Vajna 2013-12-28 10:01:01 UTC
Fixed on master and libreoffice-4-2, libreoffice-4-1 review: https://gerrit.libreoffice.org/7220
Comment 14 Commit Notification 2013-12-29 16:53:48 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8b8152b8fbfb39f44fe0441decd3a746684f4382&h=libreoffice-4-1

fdo#65090 RTF filter: import RTF_CLMGF and RTF_CLMRG


It will be available in LibreOffice 4.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Björn Michaelsen 2014-03-06 17:20:29 UTC
*** Bug 73820 has been marked as a duplicate of this bug. ***
Comment 16 Robinson Tryon (qubit) 2015-12-17 12:15:05 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]