fdo#65090 RTF filter: import RTF_CLMGF and RTF_CLMRG

These describe an explicit horizontal merge, that is not something Word
itself creates, but it turns out the Calc RTF export does.

(cherry picked from commits bb562304c1e1c61a882e6db65806cfdf8601bcbf,
97dcf77841d19d344d58d5bdacdab141cdea4817 and
6eb02ac8a77f9f89f256b190281029f6cbd60d95)

Conflicts:
	sw/qa/extras/ooxmlimport/ooxmlimport.cxx
	writerfilter/source/dmapper/PropertyIds.cxx
	writerfilter/source/dmapper/PropertyIds.hxx
	writerfilter/source/rtftok/rtfdocumentimpl.cxx

Reviewed-on: https://gerrit.libreoffice.org/7220
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>

Conflicts:

	sw/qa/extras/ooxmlimport/ooxmlimport.cxx
	sw/qa/extras/rtfimport/rtfimport.cxx
	writerfilter/source/dmapper/PropertyIds.cxx
	writerfilter/source/dmapper/PropertyIds.hxx

Change-Id: I1b6ec10bb8e8bd40e24791ccc96f2f066dd0d5d5