sw/qa/extras/rtfimport/rtfimport.cxx
@@ -162,6 +162,7 @@ public:
     void testFdo68291();
     void testFdo69384();
     void testFdo70221();
+    void testFdo65090();
     void testN823675();
     void testCp1000018();
 
@@ -309,6 +310,7 @@ void Test::run()
         {"fdo68291.odt", &Test::testFdo68291},
         {"hello.rtf", &Test::testFdo69384},
         {"fdo70221.rtf", &Test::testFdo70221},
+        {"fdo65090.rtf", &Test::testFdo65090},
         {"n823675.rtf", &Test::testN823675},
         {"cp1000018.rtf", &Test::testCp1000018},
     };
@@ -1521,6 +1523,16 @@ void Test::testCp1000018()
     uno::Reference<text::XTextRange> xTextRange(xFootnotes->getByIndex(0), uno::UNO_QUERY);
     OUString aExpected("Footnote first line.\n");
     CPPUNIT_ASSERT_EQUAL(aExpected, xTextRange->getString());
+}
+
+void Test::testFdo65090()
+{
+    uno::Reference<text::XTextTablesSupplier> xTablesSupplier(mxComponent, uno::UNO_QUERY);
+    uno::Reference<container::XIndexAccess> xTables(xTablesSupplier->getTextTables( ), uno::UNO_QUERY);
+    uno::Reference<text::XTextTable> xTextTable(xTables->getByIndex(0), uno::UNO_QUERY);
+    uno::Reference<table::XTableRows> xTableRows(xTextTable->getRows(), uno::UNO_QUERY);
+    // The first row had 3 cells, instead of a horizontally merged one and a normal one (2 -> 1 separator).
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(1), getProperty< uno::Sequence<text::TableColumnSeparator> >(xTableRows->getByIndex(0), "TableColumnSeparators").getLength());
 }
 
 CPPUNIT_TEST_SUITE_REGISTRATION(Test);
